# Vera

./: .gitignore  CMakeLists.txt
example/: basic.cpp
src/core/app/: App.cpp  App.h  AppInfo.h  Error.h  Types.h
src/core/input/: Joystick.h  Keys.h  Mouse.h
src/core/monitor/: Monitor.h
src/core/platform/: IPlatformBackend.h  NativeHandle.h  PlatformFactory.h
src/core/window/: DragDrop.h  Window.h  WindowTypes.h
src/platform/wayland/: WaylandBackend.cxx  WaylandBackend.hxx
src/platform/wayland/cursor/: WaylandCursor.hxx
src/platform/wayland/desktop/: WaylandClipboard.hxx  WaylandDecoration.hxx  WaylandDragDrop.hxx  WaylandTheme.hxx
src/platform/wayland/events/: WaylandEvents.hxx
src/platform/wayland/input/: WaylandJoystick.cxx  WaylandJoystick.hxx  WaylandKeyboard.hxx  WaylandPointer.hxx
src/platform/wayland/input/constraints/: WaylandInputConstraint.cxx  WaylandInputConstraint.hxx
src/platform/wayland/internal/: WaylandInternal.hxx  WaylandSeat.hxx
src/platform/wayland/monitor/: WaylandMonitor.cxx  WaylandMonitor.hxx
src/platform/wayland/window/: WaylandState.hxx  WaylandWindow.cxx  WaylandWindow.hxx
src/platform/win32/: intern.h  win32Backend.cpp  win32Backend.h
src/platform/win32/events/: events.cpp  handleMessage.cpp
src/platform/win32/utils/: win32_utils.h  windowCreationUtils.h
src/platform/win32/window/: vera_win32.cpp  vera_win32.h
src/platform/x11/: X11Backend.cxx  X11Backend.hxx
src/platform/x11/cursor/: X11Cursor.cxx  X11Cursor.hxx
src/platform/x11/desktop/: X11Clipboard.hxx  X11DragDrop.hxx  X11Theme.hxx
src/platform/x11/events/: X11Events.hxx
src/platform/x11/input/: X11Joystick.cxx  X11Joystick.hxx  X11Keyboard.cxx  X11Keyboard.hxx  X11Mouse.hxx
src/platform/x11/internal/: X11Atoms.hxx  X11Internal.hxx  X11XInput2.hxx  X11XKB.cxx  X11XKB.hxx
src/platform/x11/monitor/: X11Monitor.cxx  X11Monitor.hxx  X11RandR.cxx  X11RandR.hxx
src/platform/x11/window/: X11Decoration.hxx  X11Fullscreen.hxx  X11Properties.hxx  X11Window.cxx  X11Window.hxx
src/vera_shell/core_shell/: BackendFactory.cxx  BackendFactory.h  Shell.cpp  Shell.h  Types.h
src/vera_shell/platform/linux/: Association.h  Badge.h  Dialog.h  Environment.h  Integration.h  Launcher.h  LinuxBackend.cxx  LinuxBackend.h  Notification.h  Power.h  Sound.h  Tray.h
src/vera_shell/platform/win32/: Association.h  Badge.h  Dialog.h  Integration.h  Launcher.h  Notification.h  Power.h  Sound.h  Tray.h  Win32Backend.cxx  Win32Backend.h
src/vera_windowing/core/app/: App.cpp  App.h  Backend.h
src/vera_windowing/platform/wayland/: WaylandBackend.cxx  WaylandBackend.hxx
src/vera_windowing/platform/wayland/cursor/: WaylandCursor.cxx  WaylandCursor.hxx
src/vera_windowing/platform/wayland/desktop/: WaylandClipboard.cxx  WaylandClipboard.hxx  WaylandDecoration.cxx  WaylandDecoration.hxx  WaylandDragDrop.cxx  WaylandDragDrop.hxx  WaylandTheme.cxx  WaylandTheme.hxx
src/vera_windowing/platform/wayland/events/: WaylandEvents.cxx  WaylandEvents.hxx
src/vera_windowing/platform/wayland/input/: WaylandJoystick.cxx  WaylandJoystick.hxx  WaylandKeyboard.cxx  WaylandKeyboard.hxx  WaylandPointer.cxx  WaylandPointer.hxx
src/vera_windowing/platform/wayland/input/constraints/: WaylandInputConstraint.cxx  WaylandInputConstraint.hxx
src/vera_windowing/platform/wayland/internal/: WaylandInternal.hxx  WaylandSeat.cxx  WaylandSeat.hxx
src/vera_windowing/platform/wayland/monitor/: WaylandMonitor.cxx  WaylandMonitor.hxx
src/vera_windowing/platform/wayland/window/: WaylandState.hxx  WaylandWindow.cxx  WaylandWindow.hxx
src/vera_windowing/platform/win32/: intern.h  win32Backend.cpp
src/vera_windowing/platform/win32/events/: handleMessage.cpp
src/vera_windowing/platform/win32/input/: joystickXInput.h
src/vera_windowing/platform/win32/utils/: eventUtils.h  keyTranslationMap.cpp  keyTranslationMap.h  win32_utils.h  windowCreationUtils.cpp
src/vera_windowing/platform/win32/window/: vera_win32.cpp  vera_win32.h
src/vera_windowing/platform/x11/: X11Backend.cxx  X11Backend.hxx
src/vera_windowing/platform/x11/cursor/: X11Cursor.cxx  X11Cursor.hxx
src/vera_windowing/platform/x11/desktop/: X11Clipboard.cxx  X11Clipboard.hxx  X11DragDrop.cxx  X11DragDrop.hxx  X11Theme.cxx  X11Theme.hxx
src/vera_windowing/platform/x11/events/: X11Events.cxx  X11Events.hxx
src/vera_windowing/platform/x11/input/: X11Joystick.cxx  X11Joystick.hxx  X11Keyboard.hxx  X11Mouse.cxx  X11Mouse.hxx
src/vera_windowing/platform/x11/internal/: X11Atoms.cxx  X11Atoms.hxx  X11Internal.hxx  X11XInput2.hxx  X11XKB.cxx
src/vera_windowing/platform/x11/monitor/: X11Monitor.cxx  X11Monitor.hxx  X11RandR.cxx  X11RandR.hxx
src/vera_windowing/platform/x11/window/: X11Decoration.cxx  X11Decoration.hxx  X11Fullscreen.cxx  X11Fullscreen.hxx  X11Properties.cxx  X11Properties.hxx  X11Window.cxx  X11Window.hxx
